fix bg color picker rendered behind shape menu (#1445)
* fix bg color picker rendered behind shape menu

* add comment

--- a/src/components/Island.css
+++ b/src/components/Island.css
@@ -5,4 +5,5 @@
   box-shadow: var(--shadow-island);
   border-radius: var(--border-radius-m);
   padding: calc(var(--padding) * var(--space-factor));
+  position: relative;
 }
